k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eve-incursions
  labels:
    name: eve-incursions
    app: eve-incursions
